[package]
name = "tabby_worker_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tabby_worker_manager"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
async-trait = "0.1"
bollard = "0.15"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
